<resources>
    <string name="app_name">DepressionsApp</string>

    <!-- Drawer Menu strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="connected_devices">Verbundene Geräte</string>
    <string name="device_hue">Stimmungsleuchte</string>
    <string name="device_arduino">Sensorboard</string>
    <string name="nav_item_mood">Stimmung dokumentieren</string>
    <string name="nav_item_visualisation">Visualisierungen</string>
    <string name="nav_item_settings">Einstellungen</string>
    <string name="nav_item_alarmclock">Schlafphasenwecker</string>
    <string name="nav_item_music">Musik</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Alarm Activity strings -->
    <string name="button_setAlarm">Alarm einstellen</string>

    <!-- Settings Activity strings -->
    <string name="settingsActivity_name">Einstellungen</string>
    <string name="settingsActivity_generalSettings">Allgemeine Einstellungen:</string>
    <string name="settingsActivity_pushNotifications">Push Benachrichtungen</string>
    <string name="settingsActivity_autoPlay">Automatisch Musik abspielen</string>
    <string name="settingsActivity_moodQuestionnaireInterval">Intervall Stimmungsabfrage</string>
    <string name="settingsActivity_moodQuestionnaireIntervalVariable">4 Stunden</string>
    <string name="settingsActivity_language">Sprache/Language:</string>
    <string name="settingsActivity_data">Daten:</string>
    <string name="settingsActivity_dataExplanation">Die gesammelten Daten werden auf deinem Handy lokal gespeichert.</string>
    <string name="settingsActivity_deleteDataExplanation">Hier kannst du deinen Account und alle deine Daten löschen. Du kannst dann keine vergangenen Visualisierungen mer einsehen.</string>
    <string name="settingsActivity_deleteData">Daten löschen</string>
    <string name="settingsActivity_langDe">Deutsch</string>
    <string name="settingsActivity_langEn">Englisch</string>

    <!-- Main Activity strings -->
    <string name="mainActivity_welcomeBack">Willkommen zurück!</string>
    <string name="mainActivity_generalState">Gesamtzustand:</string>
    <string name="mainActivity_roomTemperature">Aktuelle Raumtemperatur:</string>
    <string name="mainActivity_airQuality">Aktuelle Luftqualität:</string>
    <string name="mainActivity_airQualityVariable">85%</string>
    <string name="mainActivity_roomTemperatureValue">18°C</string>

    <!-- Main Activity strings -->
    <string name="loginActivity_welcome">Willkommen bei <i>DepressionsApp</i></string>
    <string name="loginActivity_username">Username:</string>
    <string name="loginActivity_password">Passwort:</string>
    <string name="loginActivity_login">Login</string>

    <!-- MoodEntry Activity strings -->
    <string name="moodActivity_name">Stimmung dokumentieren</string>
    <string name="moodActivity_please_select_from_spinners">Bitte wählen Sie Antworten für alle 5 Fragen</string>
    <string name="moodActivity_please_select">Bitte auswählen</string>
    <string name="moodActivity_pleaseChoose">Bitte wählen Sie ohne Nachzudenken jeweils eines der neun gezeigten Bilder aus:</string>
    <string name="moodActivity_1of2">1/2</string>
    <string name="moodActivity_2of2">2/2</string>
    <string name="moodActivity_question5">Mein Alltag ist voller Dinge, die mich interessieren</string>
    <string name="moodActivity_question4">Beim Aufwachen habe ich mich frisch und ausgeruht gefühlt</string>
    <string name="moodActivity_question3">Gerade fühle ich mich energetisch und aktiv</string>
    <string name="moodActivity_question2">Gerade fühle ich mich ruhig und entspannt</string>
    <string name="moodActivity_question1">Gerade bin ich froh und guter Laune</string>
    <string name="moodActivity_toastNoInput">Bitte beantworte alle 5 Fragen!</string>
    <string name="moodActivity_toastSuccess">Deine Eingaben wurden in der Datenbank gesichert. Danke für das Eingeben deiner Stimmung</string>
    <string name="moodActivity_buttonSend">Abschicken</string>

    <!-- Alarmclock Activity strings -->
    <string name="alarmclockActivity_name">Schlafphasenwecker</string>
    <string name="alarmclockActivity_alarmclockExplanation"><![CDATA[Um tagsüber wach und ausgeruht zu sein ist guter Schlaf wichtig. Wenn dein Wecker mitten in einer Tiefschlafphase klingelt, fällt dir das Aufstehen und wach bleiben schwer. \n Dieser Seite erklärt dir, wann du aufstehen solltest, um in einer Leichtschlafphase geweckt zu werden. ]]></string>

    <!-- Visualisations Activity strings -->
    <string name="visualisationsActivity_name">Visualisierungen</string>

    <!-- Music Activity strings -->
    <string name="musicActivity_name">Musik</string>

    <!-- Samsung Gear Activity strings -->
    <string name="watchActivity_name">Samsung Gear</string>

    <!-- Alexa Activity strings -->
    <string name="alexaActivity_name">Amazon Alexa</string>
    <string name="alexaActivity_noResultsAvailable">Keine Testergebnisse vorhanden</string>
    <string name="alexaActivity_positiveResult">Dein Ergebnis spricht für ein gutes Wohlbefinden.</string>
    <string name="alexaActivity_negativeResult">Eine behandlungsbedürftige Überlastung, ein Burnout oder eine Depression können bei deinem Ergebnis nicht sicher ausgeschlossen werden. Dies ist aber noch keine Diagnose, hierfür solltest du eine gezielte Diagnostik durchführen lassen.</string>

    <!-- Hue Activity strings -->
    <string name="hueActivity_name">Philips Hue</string>
    <string name="hueActivity_brightness">Helligkeit</string>
    <string name="hueActivity_lightTemperature">Lichttemperatur (weiß nach rot)</string>
    <string name="hueActivity_lampSwichtedOn">Ist deine Lampe eingeschaltet?</string>
    <string name="hueActivity_lightExplanation">Die Beleuchtung in deinem Zimmer hat eine direkte Auswirkung auf deine Stimmung. Passe daher über die Helligkeit und Lichttemperatur deine Beleuchtung so an, dass sie dich positiv stimmt.</string>
    <string name="hueActivity_autoBrightness">Automatische Helligkeitsanpassung</string>
    <string name="hueActivity_connecToBrdige">Verbindung zu Hue herstellen</string>
    <string name="hueActivity_isConnected">Hue verbunden?</string>
    <string name="hueActivity_settingsUpdated">Die Einstellungen für deine Lampe wurden aktualisiert.</string>
    <string name="hueActivity_noConnectionPossible">Es konnte keine Verbindung hergestellt werden.</string>
    <string name="hueActivity_connectionAcquired">Es wurde eine Verbindung zur Bridge hergestellt.</string>
    <string name="hueActivity_lampConnected">Lampe ist verbunden!</string>
    <string name="hueActivity_noLampConnected">Lampe ist nicht verbunden!</string>

    <!-- Arduino Activity strings -->
    <string name="sensorActivity_name">Arduino Sensorboard</string>

    <!-- Alarmclock Activity strings -->
    <string name="alarmclockActivity_sleepTimeExplanation">Ein Erwachsener sollte 4-6 Schlafzyklen á 90 Minuten pro Nacht durchlaufen. Basierend auf deinen Eingaben solltest du deswegen um</string>
    <string name="alarmclockActivity_or">oder</string>
    <string name="alarmclockActivity_bedTimeQuestion">Wann möchtest du ins Bett gehen?</string>
    <string name="alarmclockActivity_bedtimeButton">Uhrzeit eingeben</string>
    <string name="alarmclockActivity_fallingAsleepTime">Wie lange brauchst du etwa zum Einschlafen?</string>
    <string name="alarmclockActivity_minutes">Minuten</string>
    <string name="alarmclockActivity_pleaseEnterData">Bitte Daten eingeben</string>
    <string name="alarmclockActivity_getup">aufstehen.</string>
    <string name="mainActivity_graphExplanation">Hier siehst du deine Stimmung im zeitlichen Verlauf</string>
    <string name="visualisationsActivity_title">Visualisierungen</string>
    <string name="visualisationsActivity_explanation">Hier kannst du dir Visualisierungen deiner aufgezeichneten Daten ansehen</string>
    <string name="visualisationsActivity_mood">Stimmung</string>
    <string name="visualisationsActivity_moodExplanation">Hier siehst du deine Stimmung, die du entweder mit deiner Alexa oder dieser App dokumentieren kannst</string>
    <string name="visualisationsActivity_sleepExplanation">Hier kannst du sehen wie viel Schlaf du pro Nacht bekommen hast</string>
    <string name="visualisationsActivity_sleep">Schlaf</string>
    <string name="visualisationsActivity_moodLegend">Stimmung</string>
    <string name="visualisationsActivity_sleepLegend">Stunden Schlaf</string>
    <string name="device_alexa">Sprachsteuerung</string>
    <string name="device_watch">Fitness Tracker</string>

    <!-- Samsung Health Strings -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="visualisationsActivity_results">Ergebnisse</string>
    <string name="visualisationsActivity_data">Daten</string>
    <string name="desc" translatable="false">Total Calories</string>
    <string name="today" translatable="false">Today</string>
    <string name="breakfast" translatable="false">Breakfast</string>
    <string name="lunch" translatable="false">Lunch</string>
    <string name="dinner" translatable="false">Dinner</string>
    <string name="morning_snack" translatable="false">Morning Snack</string>
    <string name="afternoon_snack" translatable="false">Afternoon Snack</string>
    <string name="evening_snack" translatable="false">Evening Snack</string>
    <string name="title_choose_food_activity" translatable="false">Choose %s Food</string>
    <string name="total" translatable="false">Total</string>
    <string name="unit1" translatable="false">Cals</string>
    <string name="title_dialog_add_meal" translatable="false">Enter the take times</string>
    <string name="msg_dialog_add_meal" translatable="false">%1$s : %2$.1f kcals/time</string>
    <string name="confirm" translatable="false">Confirm</string>
    <string name="move_before" translatable="false">Move Day Before</string>
    <string name="move_next" translatable="false">Move Day Next</string>
    <string name="choose_food" translatable="false">chooseFood</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="connect_to_shealth" translatable="false">Connect to Samsung Health</string>
    <string name="notice" translatable="false">Notice</string>
    <string name="msg_perm_acquired" translatable="false">All permissions should be acquired</string>
    <string name="msg_conn_not_available" translatable="false">Connection with Samsung Health is not available</string>
    <string name="msg_req_install" translatable="false">Please install Samsung Health</string>
    <string name="msg_req_upgrade" translatable="false">Please upgrade Samsung Health</string>
    <string name="msg_req_enable" translatable="false">Please enable Samsung Health</string>
    <string name="msg_req_agree" translatable="false">Please agree with Samsung Health policy</string>
    <string name="msg_req_available" translatable="false">Please make Samsung Health available</string>
    <string name="desc_step" translatable="false">Diary</string>
    <string name="title1" translatable="false">Total</string>
    <string name="unit1_step" translatable="false">Steps</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>

</resources>
