<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mood"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/nav_item_mood" />
        <item
            android:id="@+id/nav_visualizations"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/nav_item_visualisation" />
        <item
            android:id="@+id/nav_alarmclock"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/nav_item_alarmclock" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_item_settings" />
    </group>

    <item android:title="@string/connected_devices">
        <menu>
            <item
                android:id="@+id/devices_watch"
                android:icon="@drawable/ic_watch_black_24dp"
                android:title="@string/device_watch" />
            <item
                android:id="@+id/devices_alexa"
                android:icon="@drawable/ic_speaker_black_24dp"
                android:title="@string/device_alexa" />
            <item
                android:id="@+id/devices_hue"
                android:icon="@drawable/ic_lightbulb_outline_black_24dp"
                android:title="@string/device_hue" />
            <item
                android:id="@+id/devices_arduino"
                android:icon="@drawable/ic_nfc_black_24dp"
                android:title="@string/device_arduino" />
        </menu>
    </item>

</menu>
