<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/graphs.com.graphs"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.elisabeth.depressionsapp.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mainActivity_welcomeBack"
        android:id="@+id/textView2"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/mainActivity_graphExplanation"
        android:layout_below="@+id/textView2"
        android:id="@+id/textView52" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:id="@+id/imageView3"
                android:layout_marginTop="70dp"
                android:src="@drawable/smiley1" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:id="@+id/imageView4"
                android:layout_marginTop="27dp"
                android:src="@drawable/smiley2"
                android:layout_marginLeft="0dp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:id="@+id/imageView5"
                android:layout_marginTop="27dp"
                android:src="@drawable/smiley3" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:id="@+id/imageView6"
                android:layout_marginTop="27dp"
                android:src="@drawable/smiley4"
                android:layout_marginLeft="0dp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:id="@+id/imageView7"
                android:layout_marginTop="27dp"
                android:src="@drawable/smiley5" />

        </LinearLayout>

        <com.jjoe64.graphview.GraphView
            android:layout_width="wrap_content"
            android:layout_height="200dip"
            android:id="@+id/graph"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="90dp" />

    </LinearLayout>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:rating="3.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mainActivity_generalState"
        android:id="@+id/textView3"
        android:layout_below="@+id/ratingBar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mainActivity_roomTemperature"
        android:id="@+id/textView6"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mainActivity_airQuality"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mainActivity_airQualityVariable"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mainActivity_roomTemperatureValue"
        android:id="@+id/textView9"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
