<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.elisabeth.depressionsapp.QuestionsActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/buttonSubmitForm"
        android:fadeScrollbars="false"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/moodActivity_question1"
                android:id="@+id/textView18"
                android:layout_alignParentStart="true" />

            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smile_rating_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView18"
                android:layout_centerHorizontal="true"/>

            <!--<Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_below="@+id/textView18"
                android:layout_centerHorizontal="true"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/moodActivity_question2"
                android:id="@+id/textView19"
                android:layout_below="@+id/smile_rating_1"
                android:layout_alignParentStart="true" />

            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smile_rating_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView19"
                android:layout_centerHorizontal="true"/>

            <!--<Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:layout_below="@+id/textView19"
                android:layout_alignParentEnd="true" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/moodActivity_question3"
                android:id="@+id/textView20"
                android:layout_below="@+id/smile_rating_2"
                android:layout_alignParentStart="true" />

            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smile_rating_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView20"
                android:layout_centerHorizontal="true"/>

            <!--<Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner3"
                android:layout_below="@+id/textView20"
                android:layout_alignParentEnd="true" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/moodActivity_question4"
                android:id="@+id/textView17"
                android:layout_below="@+id/smile_rating_3"
                android:layout_alignParentStart="true" />

            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smile_rating_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView17"
                android:layout_centerHorizontal="true"/>

            <!--<Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner4"
                android:layout_below="@+id/textView17"
                android:layout_alignParentEnd="true" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/moodActivity_question5"
                android:id="@+id/textView21"
                android:layout_below="@+id/smile_rating_4"
                android:layout_centerHorizontal="true" />

            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smile_rating_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView21"
                android:layout_centerHorizontal="true"/>

            <!--<Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner5"
                android:layout_below="@+id/textView21"
                android:layout_centerHorizontal="true"
                android:layout_alignParentEnd="true" />-->

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/moodActivity_2of2"
        android:id="@+id/textView5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/moodActivity_buttonSend"
        android:id="@+id/buttonSubmitForm"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/textView5" />

</RelativeLayout>
